// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Bleed handles 0 value 1`] = `
{
  "classNames": [
    "root",
    "--bleed-false",
  ],
  "variables": {
    "--_uic-bleed": 0,
  },
}
`;

exports[`Styles/Bleed handles positive value 1`] = `
{
  "classNames": [
    "root",
    "--bleed",
  ],
  "variables": {
    "--_uic-bleed": 4,
  },
}
`;

exports[`Styles/Bleed handles responsive value 1`] = `
{
  "classNames": [
    "root",
    "--bleed",
    "--bleed-false--m",
    "--bleed-true--l",
  ],
  "variables": {
    "--_uic-bleed": 4,
    "--_uic-bleed-l": 2,
    "--_uic-bleed-m": 0,
  },
}
`;

exports[`Styles/Bleed handles undefined value 1`] = `null`;
